compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___invalid_call_is_number.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 94
expression: "\nuse <- 123\n123\n"
snapshot_kind: text
---
----- SOURCE CODE

use <- 123
123


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:2:8
  │
2 │ use <- 123
  │        ^^^

In a use expression, there should be a function on the right hand side of
`<-`, but this value has type:

    Int

See: https://tour.gleam.run/advanced-features/use/
