compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___invalid_callback_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 204
expression: "\nlet x = fn(f) { f() + 1 }\nuse <- x()\nNil\n"
snapshot_kind: text
---
----- SOURCE CODE

let x = fn(f) { f() + 1 }
use <- x()
Nil


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:1
  │
4 │ Nil
  │ ^^^

Expected type:

    Int

Found type:

    Nil
