compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___invalid_callback_type_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 215
expression: "\nlet x = fn(f) { \"Hello, \" <> f() }\nuse <- x()\nlet n = 1\nn + 2\n"
snapshot_kind: text
---
----- SOURCE CODE

let x = fn(f) { "Hello, " <> f() }
use <- x()
let n = 1
n + 2


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:1
  │
5 │ n + 2
  │ ^^^^^

Expected type:

    String

Found type:

    Int
