compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___invalid_callback_type_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 227
expression: "\nlet x = fn(f) { \"Hello, \" <> f() }\nlet y = fn(f) { 1 + f() }\nuse <- x()\nuse <- y()\nlet n = 1\nn + 1\n"
snapshot_kind: text
---
----- SOURCE CODE

let x = fn(f) { "Hello, " <> f() }
let y = fn(f) { 1 + f() }
use <- x()
use <- y()
let n = 1
n + 1


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:1
  │
5 │ use <- y()
  │ ^^^^^^^^^^

Expected type:

    String

Found type:

    Int
