compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___wrong_callback_arg_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 312
expression: "\npub type Box {\n  Box(Int)\n}\n\npub fn main() {\n  let x = fn(f) { \"Hello, \" <> f(Box(1)) }\n  use Box(\"hi\") <- x()\n  \"Giacomo!\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Box {
  Box(Int)
}

pub fn main() {
  let x = fn(f) { "Hello, " <> f(Box(1)) }
  use Box("hi") <- x()
  "Giacomo!"
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:8:11
  │
8 │   use Box("hi") <- x()
  │           ^^^^

Expected type:

    Int

Found type:

    String
