compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___wrong_callback_arg_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 329
expression: "\npub type Box {\n  Box(Int)\n}\n\npub fn main() {\n  let x = fn(f) { \"Hello, \" <> f(1) }\n  use Box(1) <- x()\n  \"Giacomo!\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Box {
  Box(Int)
}

pub fn main() {
  let x = fn(f) { "Hello, " <> f(1) }
  use Box(1) <- x()
  "Giacomo!"
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:8:7
  │
8 │   use Box(1) <- x()
  │       ^^^^^^

Expected type:

    Int

Found type:

    Box
